jupyterhub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyterhub
  template:
    metadata:
      labels:
        app: jupyterhub
    spec:
      containers:
      - name: jupyterhub
        image: jupyter/minimal-notebook:x86_64-ubuntu-22.04  #aashneyder/my_custom_jupyterhub:v2
        ports:
        - containerPort: 8000
