minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: storage
        hostPath:
          path: /home/neo/project2/minioMount
          type: DirectoryOrCreate
      containers:
      - name: minio
        image: minio/minio:RELEASE.2024-02-24T17-11-14Z
        args: ["server", "/data", "--address", ":9000", "--console-address", ":9090"]
        ports:
        - name: server
          containerPort: 9000
        - name: console
          containerPort: 9090
        volumeMounts:
        - name: storage
          mountPath: "/data"
