mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: aashneyder/amlflow:alfa
        ports:
        - containerPort: 5000
        args:
        - "--artifacts-destination"
        - "s3://project2"
        - "--serve-artifacts"
